src2/objects/Milestone_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Type_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Complete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Milestone Matrix</relationshipLabel>
        <relationshipName>Milestone_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Qualification__c</fullName>
        <label>Case Qualification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_CaseQualification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Reason</label>
        <referenceTo>Case_Reason__c</referenceTo>
        <relationshipLabel>Milestone Matrix</relationshipLabel>
        <relationshipName>Milestone_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <label>Milestone Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Milestone_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Milestone Matrix</relationshipLabel>
        <relationshipName>Milestone_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Milestone Matrix (Step)</relationshipLabel>
        <relationshipName>Milestone_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>600</fullName>
                    <label>Customer SLA</label>
                </value>
                <value>
                    <fullName>500</fullName>
                    <label>Internal SLA</label>
                </value>
                <value>
                    <fullName>300</fullName>
                    <label>Pause</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <label>Complete All</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>Entitlement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Procedure__c</columns>
        <columns>Step__c</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Auto_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>600,500</value>
        </filters>
        <label>All Customer &amp; Internal SLA</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Type__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Case_Entitlement__c</columns>
        <columns>Status__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Procedure__c</columns>
        <columns>Step__c</columns>
        <columns>Auto_Complete__c</columns>
        <columns>Milestone_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>Account_Type__c</columns>
        <columns>Case_Entitlement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>100</value>
        </filters>
        <label>All Entitlements</label>
    </listViews>
    <listViews>
        <fullName>All_Pause</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Procedure__c</columns>
        <columns>Step__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>300</value>
        </filters>
        <label>All Pause</label>
    </listViews>
    <listViews>
        <fullName>Complete_All</fullName>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>200</value>
        </filters>
        <label>Complete All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Milestone Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Matrix</pluralLabel>
    <recordTypes>
        <fullName>Complete_All</fullName>
        <active>true</active>
        <label>Complete All</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_SLA</fullName>
        <active>true</active>
        <label>Customer SLA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Entitlement</fullName>
        <active>true</active>
        <label>Entitlement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_SLA</fullName>
        <active>true</active>
        <label>Internal SLA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pause</fullName>
        <active>true</active>
        <label>Pause</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>